# store-server

./: README.md  pyproject.toml
store/common/: views.py
store/orders/: admin.py  forms.py  models.py  urls.py  views.py
store/orders/migrations/: 0001_initial.py
store/orders/templates/orders/: order-create.html  order.html  orders.html  success.html
store/products/: models.py  tests.py  urls.py  views.py
store/products/fixtures/: goods.json  socialapp.json
store/products/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_basket.py  0004_alter_product_options_alter_productcategory_options.py
store/products/templates/products/: base.html  baskets.html  index.html  products.html
store/store/: urls.py
store/templates/socialaccount/: login.html
store/users/: admin.py  allauth_adapter.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
store/users/migrations/: 0001_initial.py  0002_user_is_verified_email_alter_user_email_and_more.py
store/users/templates/users/: base.html  email_verification.html  login.html  profile.html  registration.html
