[tool.poetry]
name = "store-server"
version = "0.1.0"
description = ""
authors = ["Rom1xa <abakumoff.roman2018@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.15"
pillow = "^10.4.0"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
